--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_svg: 
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
 
 dev_dependencies:
   flutter_test:
