--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_svg: 
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
+  cloud_functions: ^6.0.2
 
 dev_dependencies:
   flutter_test:
