Revert "feat: create backend"
This reverts commit 3de349403861e2e208289b0b2c6d68bf68d61a6a.

--- a/firebase.json
+++ b/firebase.json
@@ -1,50 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "poliai-f2a8e",
-          "appId": "1:157803389321:android:12f7ce9f06f6c7a2c0c158",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "poliai-f2a8e",
-          "configurations": {
-            "android": "1:157803389321:android:12f7ce9f06f6c7a2c0c158",
-            "ios": "1:157803389321:ios:5cc03b0d11ed4068c0c158",
-            "web": "1:157803389321:web:417f7256deb5889fc0c158",
-            "windows": "1:157803389321:web:75b87b30a0a3fb1cc0c158"
-          }
-        }
-      }
-    }
-  },
-  "functions": [
-    {
-      "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
-        "npm --prefix \"$RESOURCE_DIR\" run build"
-      ],
-      "source": "functions"
-    }
-  ],
-  "firestore": {
-    "database": "(default)",
-    "location": "southamerica-east1",
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "storage": {
-    "rules": "storage.rules"
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"poliai-f2a8e","appId":"1:157803389321:android:12f7ce9f06f6c7a2c0c158","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"poliai-f2a8e","configurations":{"android":"1:157803389321:android:12f7ce9f06f6c7a2c0c158","ios":"1:157803389321:ios:5cc03b0d11ed4068c0c158","web":"1:157803389321:web:417f7256deb5889fc0c158","windows":"1:157803389321:web:75b87b30a0a3fb1cc0c158"}}}}}}
