--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cloud_firestore: ^6.0.2
   firebase_storage: ^13.0.2
   firebase_app_check: ^0.4.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
