--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_storage: ^13.0.2
   firebase_app_check: ^0.4.1
   cached_network_image: ^3.3.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
